--- a/react-truck/public/index.html
+++ b/react-truck/public/index.html
@@ -2,8 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+   <meta name="description" content="MADAR" />
+   <meta name="keywords" content="Transporting" />
+   <meta name="author" content="Nuance Infotech" />
+   <meta name="MobileOptimized" content="320" />
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+   <link href="/css/main.css" rel="stylesheet" type="text/css" />
+   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+   <!-- Styles -->
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+   <link href="/css/bootstrap.min.css" rel="stylesheet">
+   <link href="/css/fontawesome-all.min.css" rel="stylesheet">
+   <link href="/css/swiper.css" rel="stylesheet">
+   <link href="/css/styles.css" rel="stylesheet">
+   
+   
+   <!-- Favicon  -->
+   <link rel="icon" href="images/favicon.ico">
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -39,5 +60,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <!-- Scripts -->
+    <script src="/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+    <script src="/js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+    <script src="/js/purecounter.min.js"></script> <!-- Purecounter counter for statistics numbers -->
+    <script src="/js/scripts.js"></script> <!-- Custom scripts -->
   </body>
 </html>
